# ssi-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLI-PLAN.md  DevContainerfile  Dockerfile  LICENSE  NOTES.md  README.md  REVIEW.md  docker-compose.yml  improvements.md  install.sh  pyproject.toml
.github/workflows/: python-ci.yml  release.yml
deploy/: logrotate.conf  ssi-agent.service
dev/: Dockerfile  dev.py  docker-compose.yml  pyproject.toml  test.py
docs/: 00-index.md  01-overview.md  02-installation.md  03-quick-start.md  04-architecture.md  05-cli-reference.md  06-configuration.md  90-troubleshooting.md  91-faq.md  99-changelog.md  manifest.json
docs/service-scripts/: 00-index.md  01-structure.md  02-manifest-reference.md  03-status-codes.md  04-examples.md  04-library.md  05-best-practices.md
examples/: api-health.bash  btrfs-root-scrub.bash  daily-backup-snapshop-verifier.bash  dummy-service.bash  service-example.bash  system-updates.bash  test_service.bash  zpool-health.bash
scripts/: postinst  postrm  preinst  prerm
src/: agent.py  cli.py  commands.py  config.py  constants.py  daemon.py  logging.py  logging_config.py  models.py  parsers.py  playground.py  server.py  service.py  validators.py  watcher.py
src/ssi_agent/: client.py  config.py  constants.py  daemon.py  events.py  loader.py  logging_config.py  manager.py  models.py  monitor.py  parsers.py  system.py  validators.py
src/ssi_agent/cli/: __init__.py  auth.py  debug.py  service.py
src/ssi_agent/templates/: base.service  base.timer
src/templates/: agent.service  base.service  base.timer  logrotate.conf
tests/e2e/: test_access_control.py
typings/watchdog/: events.pyi
