[project]
name = "service-status-indicator-agent"
version = "0.1.0"
description = "The agent backend of the Service Status Indicator"
authors = [
    {name = "RemiZlatinis",email = "remizlatinis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
ruff = ">=0.5.5,<1.0.0"
black = ">=24.4.2,<25.0.0"
mypy = ">=1.11.0,<2.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250913"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.black]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
