[project]
name = "service-status-indicator-agent"
version = "0.1.0"
description = "The agent backend for the Service Status Indicator system"
authors = [
    {name = "Remi Zlatinis", email = "remizlatinis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "websockets>=15.0.1,<16.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "click>=8.2.1,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.32.3,<3.0.0",
]

[project.scripts]
service-status-indicator = "src.cli:main"
service-status-indicator-daemon = "src.watcher:main"

[project.urls]
Homepage = "https://github.com/RemiZlatinis/ssi-agent"
Repository = "https://github.com/RemiZlatinis/ssi-agent.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
ruff = ">=0.5.5,<1.0.0"
black = ">=24.4.2,<25.0.0"
mypy = ">=1.11.0,<2.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250913"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.black]
line-length = 88

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
