[project]
name = "ssi-agent"
version = "1.0.0-alpha.1"
description = "The agent component of the Service Status Indicator monitoring system"
authors = [
    {name = "Remi Zlatinis", email = "remizlatinis@gmail.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "websockets>=15.0.1,<16.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "click>=8.2.1,<9.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "sentry-sdk>=2.39.0,<3.0.0",
]
[project.scripts]
ssi-agent = "ssi_agent.cli:main"
ssi-agent-daemon = "ssi_agent.daemon:main"

[project.urls]
Homepage = "https://github.com/RemiZlatinis/ssi-agent"
Repository = "https://github.com/RemiZlatinis/ssi-agent.git"

[tool.poetry]
package-mode = true
packages = [{include = "ssi_agent", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.4.1,<9.0.0"
ruff = ">=0.5.5,<1.0.0"
mypy = ">=1.11.0,<2.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
pre-commit = "^4.3.0"
types-requests = "^2.32.4.20250913"
types-click = "^7.1.8"
ssi-agent-dev = {path = "./dev", develop = true}

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
disallow_subclassing_any = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=ssi_agent --cov-report=term-missing"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
